Grupo06/y.output
Terminals unused in grammar

   AND
   OR
   NOT
   COMENT
   whitespace
   linefeed


Estado 47 conflictos: 2 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: programaFinal $end

    1 programaFinal: programa

    2 programa: sentencia

    3 sentencia: sentencia declaracion
    4          | sentencia estructura
    5          | estructura
    6          | declaracion

    7 declaracion: DECVAR listaDeclaraciones ENDDEC

    8 listaDeclaraciones: listaDeclaraciones listaID DP tipoDato
    9                   | listaID DP tipoDato

   10 listaID: listaID COMA ID
   11        | ID

   12 tipoDato: STRING
   13         | INT
   14         | FLOAT

   15 estructura: while
   16           | if
   17           | asign
   18           | write
   19           | take
   20           | read
   21           | inlist

   22 while: WHILE condicionFinal LL_A sentencia LL_C

   23 if: IF condicionFinal LL_A sentenciaV LL_C
   24   | IF condicionFinal LL_A sentenciaV LL_C ELSE LL_A sentenciaF LL_C

   25 sentenciaV: sentencia

   26 sentenciaF: sentencia

   27 condicionFinal: condicionFinal COND_AND condicion
   28               | P_A condicionFinal COND_AND condicion P_C
   29               | condicionFinal COND_OR condicion
   30               | P_A condicionFinal COND_OR condicion P_C
   31               | COND_NOT condicionFinal
   32               | P_A COND_NOT condicion P_C
   33               | P_A condicion P_C
   34               | condicion

   35 condicion: factorDer COMP_MEN factorIzq
   36          | factorDer COMP_MAY factorIzq
   37          | factorDer COMP_MENOI factorIzq
   38          | factorDer COMP_MAYOI factorIzq
   39          | factorDer COMP_IGUAL factorIzq
   40          | factorDer COMP_DIST factorIzq
   41          | COND_NOT factor
   42          | inlist

   43 factorDer: factor

   44 factorIzq: factor

   45 asign: ID OP_ASIG expresion
   46      | ID OP_ASIG CTE_STRING

   47 inlist: INLIST P_A ID PYC C_A listaExpresiones C_C P_C

   48 take: TAKE P_A signo PYC CTE_INT PYC C_A valores C_C P_C

   49 signo: OP_MAS
   50      | OP_REST
   51      | OP_MULT
   52      | OP_DIV

   53 valores: valores PYC valor
   54        | valor

   55 valor: CTE_INT
   56      | OP_REST CTE_INT
   57      | CTE_FLOAT
   58      | OP_REST CTE_FLOAT
   59      | ID

   60 listaExpresiones: listaExpresiones PYC expresion
   61                 | expresion

   62 expresion: expresion OP_MAS termino
   63          | expresion OP_REST termino
   64          | termino

   65 termino: termino OP_DIV operando
   66        | termino OP_MULT operando
   67        | operando

   68 operando: CTE_INT
   69         | OP_REST CTE_INT
   70         | CTE_FLOAT
   71         | OP_REST CTE_FLOAT
   72         | ID
   73         | P_A expresion P_C

   74 write: WRITE factor

   75 read: READ ID

   76 factor: ID
   77       | CTE_INT
   78       | OP_REST CTE_INT
   79       | CTE_STRING
   80       | CTE_FLOAT
   81       | OP_REST CTE_FLOAT


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
WHILE (258) 22
IF (259) 23 24
ELSE (260) 24
WRITE (261) 74
READ (262) 75
AND (263)
OR (264)
NOT (265)
DECVAR (266) 7
ENDDEC (267) 7
INLIST (268) 47
TAKE (269) 48
FLOAT (270) 14
STRING (271) 12
INT (272) 13
OP_MAS (273) 49 62
OP_REST (274) 50 56 58 63 69 71 78 81
OP_MULT (275) 51 66
OP_DIV (276) 52 65
OP_ASIG (277) 45 46
COMP_DIST (278) 40
COMP_MAY (279) 36
COMP_MEN (280) 35
COMP_IGUAL (281) 39
COMP_MAYOI (282) 38
COMP_MENOI (283) 37
COND_AND (284) 27 28
COND_OR (285) 29 30
COND_NOT (286) 31 32 41
P_A (287) 28 30 32 33 47 48 73
P_C (288) 28 30 32 33 47 48 73
LL_A (289) 22 23 24
LL_C (290) 22 23 24
C_A (291) 47 48
C_C (292) 47 48
COMA (293) 10
PYC (294) 47 48 53 60
DP (295) 8 9
ID (296) 10 11 45 46 47 59 72 75 76
CTE_INT (297) 48 55 56 68 69 77 78
CTE_FLOAT (298) 57 58 70 71 80 81
CTE_STRING (299) 46 79
COMENT (300)
whitespace (301)
linefeed (302)


No terminales con las reglas donde aparecen

$accept (48)
    en la izquierda: 0
programaFinal (49)
    en la izquierda: 1, en la derecha: 0
programa (50)
    en la izquierda: 2, en la derecha: 1
sentencia (51)
    en la izquierda: 3 4 5 6, en la derecha: 2 3 4 22 25 26
declaracion (52)
    en la izquierda: 7, en la derecha: 3 6
listaDeclaraciones (53)
    en la izquierda: 8 9, en la derecha: 7 8
listaID (54)
    en la izquierda: 10 11, en la derecha: 8 9 10
tipoDato (55)
    en la izquierda: 12 13 14, en la derecha: 8 9
estructura (56)
    en la izquierda: 15 16 17 18 19 20 21, en la derecha: 4 5
while (57)
    en la izquierda: 22, en la derecha: 15
if (58)
    en la izquierda: 23 24, en la derecha: 16
sentenciaV (59)
    en la izquierda: 25, en la derecha: 23 24
sentenciaF (60)
    en la izquierda: 26, en la derecha: 24
condicionFinal (61)
    en la izquierda: 27 28 29 30 31 32 33 34, en la derecha: 22 23
    24 27 28 29 30 31
condicion (62)
    en la izquierda: 35 36 37 38 39 40 41 42, en la derecha: 27 28
    29 30 32 33 34
factorDer (63)
    en la izquierda: 43, en la derecha: 35 36 37 38 39 40
factorIzq (64)
    en la izquierda: 44, en la derecha: 35 36 37 38 39 40
asign (65)
    en la izquierda: 45 46, en la derecha: 17
inlist (66)
    en la izquierda: 47, en la derecha: 21 42
take (67)
    en la izquierda: 48, en la derecha: 19
signo (68)
    en la izquierda: 49 50 51 52, en la derecha: 48
valores (69)
    en la izquierda: 53 54, en la derecha: 48 53
valor (70)
    en la izquierda: 55 56 57 58 59, en la derecha: 53 54
listaExpresiones (71)
    en la izquierda: 60 61, en la derecha: 47 60
expresion (72)
    en la izquierda: 62 63 64, en la derecha: 45 60 61 62 63 73
termino (73)
    en la izquierda: 65 66 67, en la derecha: 62 63 64 65 66
operando (74)
    en la izquierda: 68 69 70 71 72 73, en la derecha: 65 66 67
write (75)
    en la izquierda: 74, en la derecha: 18
read (76)
    en la izquierda: 75, en la derecha: 20
factor (77)
    en la izquierda: 76 77 78 79 80 81, en la derecha: 41 43 44 74


estado 0

    0 $accept: . programaFinal $end

    WHILE   desplazar e ir al estado 1
    IF      desplazar e ir al estado 2
    WRITE   desplazar e ir al estado 3
    READ    desplazar e ir al estado 4
    DECVAR  desplazar e ir al estado 5
    INLIST  desplazar e ir al estado 6
    TAKE    desplazar e ir al estado 7
    ID      desplazar e ir al estado 8

    programaFinal  ir al estado 9
    programa       ir al estado 10
    sentencia      ir al estado 11
    declaracion    ir al estado 12
    estructura     ir al estado 13
    while          ir al estado 14
    if             ir al estado 15
    asign          ir al estado 16
    inlist         ir al estado 17
    take           ir al estado 18
    write          ir al estado 19
    read           ir al estado 20


estado 1

   22 while: WHILE . condicionFinal LL_A sentencia LL_C

    INLIST      desplazar e ir al estado 6
    OP_REST     desplazar e ir al estado 21
    COND_NOT    desplazar e ir al estado 22
    P_A         desplazar e ir al estado 23
    ID          desplazar e ir al estado 24
    CTE_INT     desplazar e ir al estado 25
    CTE_FLOAT   desplazar e ir al estado 26
    CTE_STRING  desplazar e ir al estado 27

    condicionFinal  ir al estado 28
    condicion       ir al estado 29
    factorDer       ir al estado 30
    inlist          ir al estado 31
    factor          ir al estado 32


estado 2

   23 if: IF . condicionFinal LL_A sentenciaV LL_C
   24   | IF . condicionFinal LL_A sentenciaV LL_C ELSE LL_A sentenciaF LL_C

    INLIST      desplazar e ir al estado 6
    OP_REST     desplazar e ir al estado 21
    COND_NOT    desplazar e ir al estado 22
    P_A         desplazar e ir al estado 23
    ID          desplazar e ir al estado 24
    CTE_INT     desplazar e ir al estado 25
    CTE_FLOAT   desplazar e ir al estado 26
    CTE_STRING  desplazar e ir al estado 27

    condicionFinal  ir al estado 33
    condicion       ir al estado 29
    factorDer       ir al estado 30
    inlist          ir al estado 31
    factor          ir al estado 32


estado 3

   74 write: WRITE . factor

    OP_REST     desplazar e ir al estado 21
    ID          desplazar e ir al estado 24
    CTE_INT     desplazar e ir al estado 25
    CTE_FLOAT   desplazar e ir al estado 26
    CTE_STRING  desplazar e ir al estado 27

    factor  ir al estado 34


estado 4

   75 read: READ . ID

    ID  desplazar e ir al estado 35


estado 5

    7 declaracion: DECVAR . listaDeclaraciones ENDDEC

    ID  desplazar e ir al estado 36

    listaDeclaraciones  ir al estado 37
    listaID             ir al estado 38


estado 6

   47 inlist: INLIST . P_A ID PYC C_A listaExpresiones C_C P_C

    P_A  desplazar e ir al estado 39


estado 7

   48 take: TAKE . P_A signo PYC CTE_INT PYC C_A valores C_C P_C

    P_A  desplazar e ir al estado 40


estado 8

   45 asign: ID . OP_ASIG expresion
   46      | ID . OP_ASIG CTE_STRING

    OP_ASIG  desplazar e ir al estado 41


estado 9

    0 $accept: programaFinal . $end

    $end  desplazar e ir al estado 42


estado 10

    1 programaFinal: programa .

    $default  reduce usando la regla 1 (programaFinal)


estado 11

    2 programa: sentencia .
    3 sentencia: sentencia . declaracion
    4          | sentencia . estructura

    WHILE   desplazar e ir al estado 1
    IF      desplazar e ir al estado 2
    WRITE   desplazar e ir al estado 3
    READ    desplazar e ir al estado 4
    DECVAR  desplazar e ir al estado 5
    INLIST  desplazar e ir al estado 6
    TAKE    desplazar e ir al estado 7
    ID      desplazar e ir al estado 8

    $default  reduce usando la regla 2 (programa)

    declaracion  ir al estado 43
    estructura   ir al estado 44
    while        ir al estado 14
    if           ir al estado 15
    asign        ir al estado 16
    inlist       ir al estado 17
    take         ir al estado 18
    write        ir al estado 19
    read         ir al estado 20


estado 12

    6 sentencia: declaracion .

    $default  reduce usando la regla 6 (sentencia)


estado 13

    5 sentencia: estructura .

    $default  reduce usando la regla 5 (sentencia)


estado 14

   15 estructura: while .

    $default  reduce usando la regla 15 (estructura)


estado 15

   16 estructura: if .

    $default  reduce usando la regla 16 (estructura)


estado 16

   17 estructura: asign .

    $default  reduce usando la regla 17 (estructura)


estado 17

   21 estructura: inlist .

    $default  reduce usando la regla 21 (estructura)


estado 18

   19 estructura: take .

    $default  reduce usando la regla 19 (estructura)


estado 19

   18 estructura: write .

    $default  reduce usando la regla 18 (estructura)


estado 20

   20 estructura: read .

    $default  reduce usando la regla 20 (estructura)


estado 21

   78 factor: OP_REST . CTE_INT
   81       | OP_REST . CTE_FLOAT

    CTE_INT    desplazar e ir al estado 45
    CTE_FLOAT  desplazar e ir al estado 46


estado 22

   31 condicionFinal: COND_NOT . condicionFinal
   41 condicion: COND_NOT . factor

    INLIST      desplazar e ir al estado 6
    OP_REST     desplazar e ir al estado 21
    COND_NOT    desplazar e ir al estado 22
    P_A         desplazar e ir al estado 23
    ID          desplazar e ir al estado 24
    CTE_INT     desplazar e ir al estado 25
    CTE_FLOAT   desplazar e ir al estado 26
    CTE_STRING  desplazar e ir al estado 27

    condicionFinal  ir al estado 47
    condicion       ir al estado 29
    factorDer       ir al estado 30
    inlist          ir al estado 31
    factor          ir al estado 48


estado 23

   28 condicionFinal: P_A . condicionFinal COND_AND condicion P_C
   30               | P_A . condicionFinal COND_OR condicion P_C
   32               | P_A . COND_NOT condicion P_C
   33               | P_A . condicion P_C

    INLIST      desplazar e ir al estado 6
    OP_REST     desplazar e ir al estado 21
    COND_NOT    desplazar e ir al estado 49
    P_A         desplazar e ir al estado 23
    ID          desplazar e ir al estado 24
    CTE_INT     desplazar e ir al estado 25
    CTE_FLOAT   desplazar e ir al estado 26
    CTE_STRING  desplazar e ir al estado 27

    condicionFinal  ir al estado 50
    condicion       ir al estado 51
    factorDer       ir al estado 30
    inlist          ir al estado 31
    factor          ir al estado 32


estado 24

   76 factor: ID .

    $default  reduce usando la regla 76 (factor)


estado 25

   77 factor: CTE_INT .

    $default  reduce usando la regla 77 (factor)


estado 26

   80 factor: CTE_FLOAT .

    $default  reduce usando la regla 80 (factor)


estado 27

   79 factor: CTE_STRING .

    $default  reduce usando la regla 79 (factor)


estado 28

   22 while: WHILE condicionFinal . LL_A sentencia LL_C
   27 condicionFinal: condicionFinal . COND_AND condicion
   29               | condicionFinal . COND_OR condicion

    COND_AND  desplazar e ir al estado 52
    COND_OR   desplazar e ir al estado 53
    LL_A      desplazar e ir al estado 54


estado 29

   34 condicionFinal: condicion .

    $default  reduce usando la regla 34 (condicionFinal)


estado 30

   35 condicion: factorDer . COMP_MEN factorIzq
   36          | factorDer . COMP_MAY factorIzq
   37          | factorDer . COMP_MENOI factorIzq
   38          | factorDer . COMP_MAYOI factorIzq
   39          | factorDer . COMP_IGUAL factorIzq
   40          | factorDer . COMP_DIST factorIzq

    COMP_DIST   desplazar e ir al estado 55
    COMP_MAY    desplazar e ir al estado 56
    COMP_MEN    desplazar e ir al estado 57
    COMP_IGUAL  desplazar e ir al estado 58
    COMP_MAYOI  desplazar e ir al estado 59
    COMP_MENOI  desplazar e ir al estado 60


estado 31

   42 condicion: inlist .

    $default  reduce usando la regla 42 (condicion)


estado 32

   43 factorDer: factor .

    $default  reduce usando la regla 43 (factorDer)


estado 33

   23 if: IF condicionFinal . LL_A sentenciaV LL_C
   24   | IF condicionFinal . LL_A sentenciaV LL_C ELSE LL_A sentenciaF LL_C
   27 condicionFinal: condicionFinal . COND_AND condicion
   29               | condicionFinal . COND_OR condicion

    COND_AND  desplazar e ir al estado 52
    COND_OR   desplazar e ir al estado 53
    LL_A      desplazar e ir al estado 61


estado 34

   74 write: WRITE factor .

    $default  reduce usando la regla 74 (write)


estado 35

   75 read: READ ID .

    $default  reduce usando la regla 75 (read)


estado 36

   11 listaID: ID .

    $default  reduce usando la regla 11 (listaID)


estado 37

    7 declaracion: DECVAR listaDeclaraciones . ENDDEC
    8 listaDeclaraciones: listaDeclaraciones . listaID DP tipoDato

    ENDDEC  desplazar e ir al estado 62
    ID      desplazar e ir al estado 36

    listaID  ir al estado 63


estado 38

    9 listaDeclaraciones: listaID . DP tipoDato
   10 listaID: listaID . COMA ID

    COMA  desplazar e ir al estado 64
    DP    desplazar e ir al estado 65


estado 39

   47 inlist: INLIST P_A . ID PYC C_A listaExpresiones C_C P_C

    ID  desplazar e ir al estado 66


estado 40

   48 take: TAKE P_A . signo PYC CTE_INT PYC C_A valores C_C P_C

    OP_MAS   desplazar e ir al estado 67
    OP_REST  desplazar e ir al estado 68
    OP_MULT  desplazar e ir al estado 69
    OP_DIV   desplazar e ir al estado 70

    signo  ir al estado 71


estado 41

   45 asign: ID OP_ASIG . expresion
   46      | ID OP_ASIG . CTE_STRING

    OP_REST     desplazar e ir al estado 72
    P_A         desplazar e ir al estado 73
    ID          desplazar e ir al estado 74
    CTE_INT     desplazar e ir al estado 75
    CTE_FLOAT   desplazar e ir al estado 76
    CTE_STRING  desplazar e ir al estado 77

    expresion  ir al estado 78
    termino    ir al estado 79
    operando   ir al estado 80


estado 42

    0 $accept: programaFinal $end .

    $default  aceptar


estado 43

    3 sentencia: sentencia declaracion .

    $default  reduce usando la regla 3 (sentencia)


estado 44

    4 sentencia: sentencia estructura .

    $default  reduce usando la regla 4 (sentencia)


estado 45

   78 factor: OP_REST CTE_INT .

    $default  reduce usando la regla 78 (factor)


estado 46

   81 factor: OP_REST CTE_FLOAT .

    $default  reduce usando la regla 81 (factor)


estado 47

   27 condicionFinal: condicionFinal . COND_AND condicion
   29               | condicionFinal . COND_OR condicion
   31               | COND_NOT condicionFinal .

    COND_AND  desplazar e ir al estado 52
    COND_OR   desplazar e ir al estado 53

    COND_AND  [reduce usando la regla 31 (condicionFinal)]
    COND_OR   [reduce usando la regla 31 (condicionFinal)]
    $default  reduce usando la regla 31 (condicionFinal)


estado 48

   41 condicion: COND_NOT factor .
   43 factorDer: factor .

    COND_AND  reduce usando la regla 41 (condicion)
    COND_OR   reduce usando la regla 41 (condicion)
    P_C       reduce usando la regla 41 (condicion)
    LL_A      reduce usando la regla 41 (condicion)
    $default  reduce usando la regla 43 (factorDer)


estado 49

   31 condicionFinal: COND_NOT . condicionFinal
   32               | P_A COND_NOT . condicion P_C
   41 condicion: COND_NOT . factor

    INLIST      desplazar e ir al estado 6
    OP_REST     desplazar e ir al estado 21
    COND_NOT    desplazar e ir al estado 22
    P_A         desplazar e ir al estado 23
    ID          desplazar e ir al estado 24
    CTE_INT     desplazar e ir al estado 25
    CTE_FLOAT   desplazar e ir al estado 26
    CTE_STRING  desplazar e ir al estado 27

    condicionFinal  ir al estado 47
    condicion       ir al estado 81
    factorDer       ir al estado 30
    inlist          ir al estado 31
    factor          ir al estado 48


estado 50

   27 condicionFinal: condicionFinal . COND_AND condicion
   28               | P_A condicionFinal . COND_AND condicion P_C
   29               | condicionFinal . COND_OR condicion
   30               | P_A condicionFinal . COND_OR condicion P_C

    COND_AND  desplazar e ir al estado 82
    COND_OR   desplazar e ir al estado 83


estado 51

   33 condicionFinal: P_A condicion . P_C
   34               | condicion .

    P_C  desplazar e ir al estado 84

    $default  reduce usando la regla 34 (condicionFinal)


estado 52

   27 condicionFinal: condicionFinal COND_AND . condicion

    INLIST      desplazar e ir al estado 6
    OP_REST     desplazar e ir al estado 21
    COND_NOT    desplazar e ir al estado 85
    ID          desplazar e ir al estado 24
    CTE_INT     desplazar e ir al estado 25
    CTE_FLOAT   desplazar e ir al estado 26
    CTE_STRING  desplazar e ir al estado 27

    condicion  ir al estado 86
    factorDer  ir al estado 30
    inlist     ir al estado 31
    factor     ir al estado 32


estado 53

   29 condicionFinal: condicionFinal COND_OR . condicion

    INLIST      desplazar e ir al estado 6
    OP_REST     desplazar e ir al estado 21
    COND_NOT    desplazar e ir al estado 85
    ID          desplazar e ir al estado 24
    CTE_INT     desplazar e ir al estado 25
    CTE_FLOAT   desplazar e ir al estado 26
    CTE_STRING  desplazar e ir al estado 27

    condicion  ir al estado 87
    factorDer  ir al estado 30
    inlist     ir al estado 31
    factor     ir al estado 32


estado 54

   22 while: WHILE condicionFinal LL_A . sentencia LL_C

    WHILE   desplazar e ir al estado 1
    IF      desplazar e ir al estado 2
    WRITE   desplazar e ir al estado 3
    READ    desplazar e ir al estado 4
    DECVAR  desplazar e ir al estado 5
    INLIST  desplazar e ir al estado 6
    TAKE    desplazar e ir al estado 7
    ID      desplazar e ir al estado 8

    sentencia    ir al estado 88
    declaracion  ir al estado 12
    estructura   ir al estado 13
    while        ir al estado 14
    if           ir al estado 15
    asign        ir al estado 16
    inlist       ir al estado 17
    take         ir al estado 18
    write        ir al estado 19
    read         ir al estado 20


estado 55

   40 condicion: factorDer COMP_DIST . factorIzq

    OP_REST     desplazar e ir al estado 21
    ID          desplazar e ir al estado 24
    CTE_INT     desplazar e ir al estado 25
    CTE_FLOAT   desplazar e ir al estado 26
    CTE_STRING  desplazar e ir al estado 27

    factorIzq  ir al estado 89
    factor     ir al estado 90


estado 56

   36 condicion: factorDer COMP_MAY . factorIzq

    OP_REST     desplazar e ir al estado 21
    ID          desplazar e ir al estado 24
    CTE_INT     desplazar e ir al estado 25
    CTE_FLOAT   desplazar e ir al estado 26
    CTE_STRING  desplazar e ir al estado 27

    factorIzq  ir al estado 91
    factor     ir al estado 90


estado 57

   35 condicion: factorDer COMP_MEN . factorIzq

    OP_REST     desplazar e ir al estado 21
    ID          desplazar e ir al estado 24
    CTE_INT     desplazar e ir al estado 25
    CTE_FLOAT   desplazar e ir al estado 26
    CTE_STRING  desplazar e ir al estado 27

    factorIzq  ir al estado 92
    factor     ir al estado 90


estado 58

   39 condicion: factorDer COMP_IGUAL . factorIzq

    OP_REST     desplazar e ir al estado 21
    ID          desplazar e ir al estado 24
    CTE_INT     desplazar e ir al estado 25
    CTE_FLOAT   desplazar e ir al estado 26
    CTE_STRING  desplazar e ir al estado 27

    factorIzq  ir al estado 93
    factor     ir al estado 90


estado 59

   38 condicion: factorDer COMP_MAYOI . factorIzq

    OP_REST     desplazar e ir al estado 21
    ID          desplazar e ir al estado 24
    CTE_INT     desplazar e ir al estado 25
    CTE_FLOAT   desplazar e ir al estado 26
    CTE_STRING  desplazar e ir al estado 27

    factorIzq  ir al estado 94
    factor     ir al estado 90


estado 60

   37 condicion: factorDer COMP_MENOI . factorIzq

    OP_REST     desplazar e ir al estado 21
    ID          desplazar e ir al estado 24
